completed Part 1: Number Facts

--- a/number-facts.html
+++ b/number-facts.html
@@ -1,16 +1,19 @@
 <!doctype html>
 <html>
+
 <head>
   <title>Num Facts</title>
   <script src="https://unpkg.com/jquery"></script>
 </head>
+
 <body>
 
 
-<div id="num-facts-area"></div>
+  <div id="num-facts-area"></div>
 
-<script src="https://unpkg.com/axios/dist/axios.js"></script>
-<script src="/static/number-facts.js"></script>
+  <script src="https://unpkg.com/axios/dist/axios.js"></script>
+  <script src="number-facts.js"></script>
 
 </body>
+
 </html>
